28-June-2012 - Sam  
 
  * Started change log
  * Corrected profiler so it properly captures POST requests (was supressing non 200s)
  * Amended Rack.MiniProfiler.config[:user_provider] to use ip addres for identity 
  * Fixed bug where unviewed missing ids never got cleared
  * Supress all '/assets/' in the rails tie (makes debugging easier)
  * record_sql was mega buggy

9-July-2012 - Sam 

  * Cleaned up mechanism for profiling in production, all you need to do now
	is call Rack::MiniProfiler.authorize_request to get profiling working in
	production 
	* Added option to display full backtraces pp=full-backtrace
	* Cleaned up railties, got rid of the post authorize callback
	* Version 0.1.3

12-July-2012 - Sam 

  * Fixed incorrect profiling steps (was not indenting or measuring start time right
	* Implemented native PG and MySql2 interceptors, this gives way more accurate times
	* Refactored context so its a proper class and not a hash 
	* Added some more client probing built in to rails
	* More tests

18-July-2012 - Sam 
  
  * Added First Paint time for chrome
  * Bug fix to ensure non Rails installs have mini profiler
  * Version 0.1.7

30-July-2012 - Sam 
  
  * Made compliant with ancient versions of Rack (including Rack used by Rails2)
  * Fixed broken share link 
  * Fixed crashes on startup (in MemoryStore and FileStore)
  * Version 0.1.8
  * Unicode fix 
  * Version 0.1.9

7-August-2012 - Sam

  * Added option to disable profiler for the current session (pp=disable / pp=enable)
  * yajl compatability contributed by Sven Riedel 
